@@ -1,12 +1,15 @@
 # vim: set noexpandtab:
 
+2013-07-12 Steve
+	* Added hasZllZll method to SusyNtTools
+
 2013-7-22 Serhan Mete <amete@cern.ch>
 	* */SusyNtTools.[cxx,h]: SusyNtTools::buildSumwMap now handles Simplified Model
 
 2013-07-22 Anyes
 	* Added mEff w/o leptons
 	* Few tweaks to TGuiUtils
-	
+
 2013-07-12 Steve
 	* Added hasZlll and hasZllll methods to SusyNtTools
 
